# di-parse

./: .gitignore  Cargo.toml  dictionary.mhtml  test.txt  test2.txt
di-parse/: Cargo.toml  README.md  test.txt  test2.txt
di-parse/src/: lex.rs  lib.rs
di-parse/src/entity/: term.rs  verb.rs
di-parse/src/parse/: grammar.rs
di-parse/src/parse/grammar/: grammar.pest
di-parse/test/: lib.rs
src/: ast.rs  dict.rs  grammar.pest  grammar.rs  lex.rs  lib.rs  models.rs  parse.rs  state.rs  token.rs
src/entity/: inflection.rs  noun.rs  number.rs
src/grammar/: grammar.pest
src/parse/grammar/: grammar.pest
