[package]
name = "di-parse"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default_run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "./src/bin/main.rs"

[dependencies]
pest = "*"
pest_derive = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
chrono = "*"
log = "*"
# chrono-human = "*"
# lexical = "*"
# chrono-english = "*"
# uom = "*"

[dev-dependencies]
pretty_assertions = "*"
