[package]
name = "di-parse"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default_run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "main"
path = "./src/bin/main.rs"

[dependencies]
pest = "*"
pest_derive = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
Inflector = "*"
chrono = "*"
log = "*"
# tokenizers = "*"
# chrono-human = "*"
# lexical = "*"
# chrono-english = "*"
# uom = "*"
# parse_duration = "*"
# regex
# inflector
# regex = "*" 237kb
  # aho-corasick = "*" 118
  # fst = "0.4" 1.58 MB levenshtein feat
  # regex-automata = "*"
  # regex-syntax = "*"

[dev-dependencies]
pretty_assertions = "*"
